# adk_tutorial_2025

./: .env.example  .gitignore  README.md  pyproject.toml
step_1/: __init__.py  agent.py
step_2_litellm/: agent.py
step_3/: agent.py
step_3/agents/: __init__.py  farewell_agent.py  greeting_agent.py
step_3/tools/: say_goodbye.py
step_4/: __init__.py  agent.py  session.py
step_4/agents/: greeting_agent.py
step_4/tools/: get_last_weather_report.py  say_goodbye.py
step_5/: agent.py  before_model_callback.py  before_tool_callback.py
step_5/agents/: farewell_agent.py
step_5/tools/: get_weather_stateful.py  say_hello.py  set_temperature_unit.py
