[project]
name = "multi-tool-agent"
version = "0.1.0"
description = "Google ADKを使用したマルチツールエージェント"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "litellm"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["step_1", "step_2_litellm", "step_3", "step_4", "step_5"]

[tool.uv]
dev-dependencies = []

